--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# LCBC functions <img src="man/figures/hex.png" align="right" alt="" width="120" />
+# LCBC functions <img src="man/figures/logo.png" align="right" alt="" width="120" />
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/LCBC-UiO/lcbcr/workflows/R-CMD-check/badge.svg)](https://github.com/LCBC-UiO/lcbcr/actions)
